fix UI for statistics when on mobile mode

--- a/htdocs/bootstrap/css/custom-css.css
+++ b/htdocs/bootstrap/css/custom-css.css
@@ -765,12 +765,12 @@ a:hover {
 .list-group-item.active:hover {
     z-index: 2;
     color: white;
-    background-color: #246EB6;
-    border-color: #246EB6;
+    background-color: #E4EBF2;
+    border-color: #E4EBF2;
 }
 
 .list-group-item:hover {
-    background-color: #E4EBF2;
+    background-color: #fff;
 }
 
 a.list-group-item:hover,
